--- a/index.html
+++ b/index.html
@@ -318,6 +318,16 @@
                         </div>
                     </div><!--end col-->
                 </div><!--end row-->
+                <div class="row mt-md-5 pt-md-3 mt-4 pt-2 mt-sm-0 pt-sm-0 justify-content-center">
+                    <div class="col-12 text-center">
+                        <div class="section-title">
+                            <h4 class="title mb-4">加入HiC，嗨享美好未来</h4>
+                            <div class="mt-4 pt-2">
+                                <a href="https://share.hicmall.com.cn/shareRegister/#/?id=781176966664421377" class="btn btn-primary"> 立即下载 App </a>
+                            </div>
+                        </div>
+                    </div><!--end col-->
+                </div><!--end row-->
             </div><!---end container-->
         </section><!--end section-->
         <!-- Section End -->
